--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
 project(Priority_Queue)
 set(CMAKE_CXX_STANDARD 14)
-add_executable(Priority_Queue std.cpp)
+add_executable(Priority_Queue PQueue.cpp)
+#add_executable(Priority_Queue std.cpp)
